# FormatX

./: .gitignore  DBChange.md  LICENSE  README.md  index.html  nextSteps.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: copilot-instructions.md  deploy.yml
assets/brand/: README.md
docs/: documents-module-research.md  migration-to-react.md  photo-page-restructure.md
docs/uk/: ANIMATION.md  ARCHITECTURE.md  FEATURES.md  GLOSSARY.md  HOOKS.md  IMAGE_CONVERTER.md  LIBRARIES.md  README.md  SANITIZER.md  SIGN_SECTION.md  STORAGE.md  STYLES.md
migrations/: 001_init.sql
public/assets/runtime/: PdfToSvgWasm.runtimeconfig.json
public/docs/uk/: CONVERTER.md  I18N.md  IMAGE_CONVERTER.md  PWA.md  README.md  STYLES.md
scripts/: copy-lo-wasm.mjs  copy-pdf2svg-runtime.mjs  with-cargo-path.mjs
src/: main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  confirm.ts  i18n.ts  icons.ts  logo.ts  router.ts  settings.ts  shell.ts  tabNav.ts  toast.ts
src/app/hooks/: useAppRoute.ts  useGlobalClipboardCapture.ts  useHotkey.ts  useIsTauri.ts  useSettings.ts  useTrayClose.ts
src/components/: BootError.tsx  DocViewer.tsx  ErrorBoundary.tsx  PdfPreview.tsx  PreviewModal.tsx  SelectionToolbar.tsx  ShellLayout.tsx  TabBar.tsx  TrayHandler.tsx
src/lib/: download.ts  iconTheme.ts  logger.ts  notifications.ts
src/locales/: en.json  it.json  uk.json
src/styles/: app.css  base.css  components.css  tokens.css
(+133 files in other folders)
